--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,37 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	android:layout_width = "match_parent"
+	android:layout_height = "match_parent"
+	>
 
-        <include
-            layout="@layout/menu_top"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/include_01"/>
-    <include
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/c_search_loading_icon"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintVertical_bias="0.022"/>
+	<include
+		android:id = "@+id/toolbar"
+		layout = "@layout/toolbar_main"
+		/>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_cards"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:scrollbars="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/include_01"
-            app:layout_constraintBottom_toTopOf="@+id/include_02"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+	<androidx.recyclerview.widget.RecyclerView
+		android:id = "@+id/rv_cards"
+		android:layout_width = "match_parent"
+		android:layout_height = "0dp"
+		app:layout_constraintTop_toBottomOf = "@+id/toolbar"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		android:scrollbars = "vertical"
+		/>
+</androidx.constraintlayout.widget.ConstraintLayout>
