--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	xmlns:tools = "http://schemas.android.com/tools"
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
 	>
@@ -18,5 +19,14 @@
 		app:layout_constraintTop_toBottomOf = "@+id/toolbar"
 		app:layout_constraintBottom_toBottomOf = "parent"
 		android:scrollbars = "vertical"
+		/>
+
+	<ListView
+		android:id = "@+id/lv_suggestions"
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		app:layout_constraintTop_toBottomOf = "@+id/toolbar"
+		android:background = "@color/white"
+		tools:layout_editor_absoluteX = "0dp"
 		/>
 </androidx.constraintlayout.widget.ConstraintLayout>
