--- a/app/src/main/res/layout/c_search.xml
+++ b/app/src/main/res/layout/c_search.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+	xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	android:layout_width = "match_parent"
-	android:layout_height = "match_parent">
-	<com.google.android.material.tabs.TabLayout android:id = "@+id/search_tab_layout"
+	android:layout_height = "match_parent"
+	>
+
+	<com.google.android.material.tabs.TabLayout
+		android:id = "@+id/search_tab_layout"
 		android:layout_width = "0dp"
 		android:layout_height = "60dp"
 		app:layout_constraintBottom_toTopOf = "@+id/search_welcome"
@@ -11,30 +15,48 @@
 		app:layout_constraintEnd_toEndOf = "@+id/search_welcome"
 		android:layout_marginBottom = "48dp"
 		style = "@style/search_tab_layout"
-	>
-		<com.google.android.material.tabs.TabItem android:layout_width = "wrap_content"
+		>
+
+		<com.google.android.material.tabs.TabItem
+			android:layout_width = "wrap_content"
 			android:layout_height = "wrap_content"
-			android:text = "@string/search_tab_vacancy"/>
-		<com.google.android.material.tabs.TabItem android:layout_width = "wrap_content"
+			android:text = "@string/search_tab_vacancy"
+			/>
+
+		<com.google.android.material.tabs.TabItem
+			android:layout_width = "wrap_content"
 			android:layout_height = "wrap_content"
-			android:text = "@string/search_tab_company"/>
-		<com.google.android.material.tabs.TabItem android:layout_width = "wrap_content"
+			android:text = "@string/search_tab_company"
+			/>
+
+		<com.google.android.material.tabs.TabItem
+			android:layout_width = "wrap_content"
 			android:layout_height = "wrap_content"
-			android:text = "@string/search_tab_resume"/>
-		<com.google.android.material.tabs.TabItem android:layout_width = "wrap_content"
+			android:text = "@string/search_tab_resume"
+			/>
+
+		<com.google.android.material.tabs.TabItem
+			android:layout_width = "wrap_content"
 			android:layout_height = "wrap_content"
-			android:text = "@string/search_tab_candidate"/>
+			android:text = "@string/search_tab_candidate"
+			/>
 	</com.google.android.material.tabs.TabLayout>
-	<SearchView android:id = "@+id/search_welcome"
+
+	<ImageButton
+		android:id = "@+id/search_welcome"
 		android:layout_width = "0dp"
 		android:layout_height = "50dp"
 		app:layout_constraintTop_toTopOf = "parent"
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
-		app:iconifiedByDefault = "false"
-		app:queryHint = "@string/search_view_hint"/>
-	<Button android:id = "@+id/search_button"
+		android:layout_marginStart = "16dp"
+		android:layout_marginEnd = "16dp"
+		android:src = "@drawable/search_image_button"
+		/>
+
+	<Button
+		android:id = "@+id/search_button"
 		android:layout_width = "0dp"
 		android:layout_height = "50dp"
 		app:layout_constraintTop_toBottomOf = "@+id/search_welcome"
@@ -43,5 +65,6 @@
 		android:layout_marginTop = "48dp"
 		android:background = "@drawable/shape_button"
 		android:textColor = "@color/font_color"
-		android:text = "@string/search_button"/>
+		android:text = "@string/search_button"
+		/>
 </androidx.constraintlayout.widget.ConstraintLayout>
