--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,13 +12,40 @@
 		layout = "@layout/toolbar_main"
 		/>
 
+	<Button
+		android:id="@+id/bars"
+		android:background="@drawable/ic_bars"
+		android:layout_width="32dp"
+		android:layout_height="32dp"
+		app:layout_constraintStart_toStartOf="@+id/toolbar"
+		app:layout_constraintTop_toTopOf="@+id/toolbar"
+		app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+		android:layout_margin="16dp"
+		/>
+
+	<androidx.appcompat.widget.SearchView
+		android:id = "@+id/search_main"
+		android:layout_width = "0dp"
+		android:layout_height = "46dp"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"
+		android:layout_marginStart = "60dp"
+		android:layout_marginEnd = "60dp"
+		android:background = "@color/white"
+		app:iconifiedByDefault = "false"
+		app:layout_constraintHorizontal_bias = "1.0"
+		app:layout_constraintVertical_bias = "0.01"
+		/>
+
 	<androidx.recyclerview.widget.RecyclerView
 		android:id = "@+id/rv_cards"
-		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 		android:layout_width = "match_parent"
 		android:layout_height = "0dp"
 		app:layout_constraintTop_toBottomOf = "@+id/toolbar"
 		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layoutManager = "androidx.recyclerview.widget.LinearLayoutManager"
 		android:scrollbars = "vertical"
 		/>
 
