--- a/app/src/main/res/layout/c_registration_02.xml
+++ b/app/src/main/res/layout/c_registration_02.xml
@@ -53,22 +53,12 @@
 		style = "@style/text_color_and_size"
 		android:inputType = "text"
 		android:hint = "@string/middle_name"/>
-	<Button android:id = "@+id/back"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		app:layout_constraintBottom_toBottomOf = "@+id/background"
-		app:layout_constraintStart_toStartOf = "@+id/background"
-		android:layout_marginBottom = "16dp"
-		android:layout_marginStart = "16dp"
-		android:background = "@drawable/shape_button"
-		android:text = "@string/back"/>
-	<Button android:id = "@+id/next"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		app:layout_constraintBottom_toBottomOf = "@+id/background"
-		app:layout_constraintEnd_toEndOf = "@+id/background"
-		android:layout_marginBottom = "16dp"
-		android:layout_marginEnd = "16dp"
-		android:background = "@drawable/shape_button"
-		android:text = "@string/next"/>
+	<Button android:id="@+id/next"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			app:layout_constraintEnd_toEndOf="@+id/background"
+			android:layout_marginEnd="8dp"
+			android:background="@drawable/shape_button"
+			android:text="@string/next" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+			android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/middle_name"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
