--- a/app/src/main/res/layout/c_card_vacancy_close.xml
+++ b/app/src/main/res/layout/c_card_vacancy_close.xml
@@ -34,15 +34,16 @@
 				android:textStyle = "bold"
 				android:textColor = "@color/font_color"
 				android:textSize = "18sp"
-				android:text = "@string/card_vacancy_close_vacancy_name"/>
-			<ImageView android:id = "@+id/eye"
-				android:layout_width = "wrap_content"
-				android:layout_height = "wrap_content"
-				app:layout_constraintTop_toTopOf = "@+id/name"
-				app:layout_constraintBottom_toBottomOf = "@+id/name"
-				app:layout_constraintStart_toEndOf = "@+id/name"
-				android:layout_marginStart = "8dp"
-				app:srcCompat = "@drawable/ic_eye"/>
+				android:maxWidth="270dp"
+				android:maxLength="60"
+				tools:text = "@string/card_vacancy_close_vacancy_name"/>
+			<ImageView android:id="@+id/eye"
+					   android:layout_width="wrap_content"
+					   android:layout_height="wrap_content"
+					   app:layout_constraintTop_toTopOf="@+id/name"
+					   app:layout_constraintBottom_toBottomOf="@+id/name"
+					   app:srcCompat="@drawable/ic_eye" app:layout_constraintEnd_toStartOf="@+id/newbie"
+					   android:layout_marginEnd="8dp"/>
 			<TextView android:id = "@+id/newbie"
 				android:layout_width = "wrap_content"
 				android:layout_height = "wrap_content"
