--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -37,6 +37,7 @@
 		app:iconifiedByDefault = "false"
 		app:layout_constraintHorizontal_bias = "1.0"
 		app:layout_constraintVertical_bias = "0.01"
+		app:queryBackground="@android:color/transparent"
 		/>
 
 	<androidx.recyclerview.widget.RecyclerView
