--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,32 +12,42 @@
 		layout = "@layout/toolbar_main"
 		/>
 
-	<Button
-		android:id="@+id/bars"
-		android:background="@drawable/ic_bars"
-		android:layout_width="32dp"
-		android:layout_height="32dp"
-		app:layout_constraintStart_toStartOf="@+id/toolbar"
-		app:layout_constraintTop_toTopOf="@+id/toolbar"
-		app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-		android:layout_margin="16dp"
-		/>
-
 	<androidx.appcompat.widget.SearchView
 		android:id = "@+id/search_main"
 		android:layout_width = "0dp"
 		android:layout_height = "46dp"
-		app:layout_constraintTop_toTopOf = "parent"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-		android:layout_marginStart = "60dp"
-		android:layout_marginEnd = "60dp"
+		app:layout_constraintTop_toTopOf = "@+id/toolbar"
+		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
+		app:layout_constraintStart_toEndOf = "@+id/bars"
+		app:layout_constraintEnd_toStartOf = "@+id/list"
+		android:layout_marginStart = "16dp"
+		android:layout_marginEnd = "16dp"
 		android:background = "@color/white"
 		app:iconifiedByDefault = "false"
-		app:layout_constraintHorizontal_bias = "1.0"
-		app:layout_constraintVertical_bias = "0.01"
-		app:queryBackground="@android:color/transparent"
+		android:singleLine = "true"
+		app:queryBackground = "@android:color/transparent"
+		/>
+
+	<Button
+		android:id = "@+id/bars"
+		android:layout_width = "32dp"
+		android:layout_height = "32dp"
+		app:layout_constraintTop_toTopOf = "@+id/toolbar"
+		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
+		app:layout_constraintStart_toStartOf = "@+id/toolbar"
+		android:layout_margin = "16dp"
+		android:background = "@drawable/ic_bars"
+		/>
+
+	<Button
+		android:id = "@+id/list"
+		android:layout_width = "32dp"
+		android:layout_height = "32dp"
+		app:layout_constraintTop_toTopOf = "@+id/toolbar"
+		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
+		app:layout_constraintEnd_toEndOf = "@+id/toolbar"
+		android:layout_margin = "16dp"
+		android:background = "@drawable/ic_list"
 		/>
 
 	<androidx.recyclerview.widget.RecyclerView
