--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	xmlns:tools = "http://schemas.android.com/tools"
+	android:id = "@+id/drawer_layout"
+	android:layout_width = "match_parent"
+	android:layout_height = "match_parent"
+	>
 
-        <FrameLayout
-                android:id="@+id/fragment_container"
-                android:layout_width="0dp"
-                android:layout_height="0dp" tools:layout_conversion_absoluteHeight="671dp"
-                tools:layout_conversion_absoluteWidth="411dp" app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/include_02"/>
+	<androidx.constraintlayout.widget.ConstraintLayout
+		xmlns:android = "http://schemas.android.com/apk/res/android"
+		xmlns:app = "http://schemas.android.com/apk/res-auto"
+		xmlns:tools = "http://schemas.android.com/tools"
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+		>
 
-        <include
-                layout="@layout/c_menu_bottom"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:id="@+id/include_02"
-                app:layout_constraintTop_toBottomOf="@+id/fragment_container"/>
+		<FrameLayout
+			android:id = "@+id/fragment_container"
+			android:layout_width = "0dp"
+			android:layout_height = "0dp"
+			app:layout_constraintTop_toTopOf = "parent"
+			app:layout_constraintBottom_toTopOf = "@+id/include_02"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			tools:layout_conversion_absoluteHeight = "671dp"
+			tools:layout_conversion_absoluteWidth = "411dp"
+			/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+		<include
+			layout = "@layout/c_menu_top"
+			android:layout_width = "match_parent"
+			android:layout_height = "wrap_content"
+			/>
 
-     <!--The navigation drawer -->
-    <com.google.android.material.navigation.NavigationView
-            android:id="@+id/navigation_view"
-            android:layout_width="320dp"
-            android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="64dp"
-            android:layout_gravity="end">
-        <include
-                layout="@layout/menu_right"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-    </com.google.android.material.navigation.NavigationView>
+		<include
+			android:id = "@+id/include_02"
+			layout = "@layout/c_menu_bottom"
+			android:layout_width = "0dp"
+			android:layout_height = "wrap_content"
+			app:layout_constraintTop_toBottomOf = "@+id/fragment_container"
+			app:layout_constraintBottom_toBottomOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			/>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+	<!--The navigation drawer -->
+	<com.google.android.material.navigation.NavigationView
+		android:id = "@+id/navigation_view"
+		android:layout_width = "320dp"
+		android:layout_height = "match_parent"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		android:layout_marginStart = "64dp"
+		android:layout_gravity = "end"
+		>
 
+		<include
+			layout = "@layout/menu_right"
+			android:layout_width = "match_parent"
+			android:layout_height = "match_parent"
+			/>
+	</com.google.android.material.navigation.NavigationView>
 </androidx.drawerlayout.widget.DrawerLayout>
