--- a/app/src/main/res/layout/c_menu_top.xml
+++ b/app/src/main/res/layout/c_menu_top.xml
@@ -4,16 +4,34 @@
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	android:layout_width = "match_parent"
 	android:layout_height = "wrap_content"
-	android:visibility="visible"
+	android:visibility="gone"
 	android:id="@+id/constraint_layout_menu_top"
 	>
 
 	<androidx.appcompat.widget.Toolbar
 		android:id = "@+id/toolbar"
 		android:layout_width = "match_parent"
-		android:layout_height = "60dp"
+		android:layout_height = "?attr/actionBarSize"
 		app:layout_constraintTop_toTopOf = "parent"
 		android:background = "@color/theme_1_color_1"
+		/>
+
+	<androidx.appcompat.widget.SearchView
+		android:id = "@+id/search_main"
+		android:layout_width = "0dp"
+		android:layout_height = "46dp"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintStart_toEndOf = "@+id/bars"
+		app:layout_constraintEnd_toStartOf = "@+id/list"
+		android:layout_marginTop = "6dp"
+		android:layout_marginStart = "16dp"
+		android:layout_marginEnd = "16dp"
+		android:background = "@color/white"
+		app:iconifiedByDefault = "false"
+		android:singleLine = "true"
+		app:queryBackground = "@android:color/transparent"
+		app:layout_constraintHorizontal_bias = "0.494"
+		android:visibility="gone"
 		/>
 
 	<Button
