--- a/app/src/main/res/layout/c_search.xml
+++ b/app/src/main/res/layout/c_search.xml
@@ -56,7 +56,7 @@
 		/>
 
 	<Button
-		android:id = "@+id/search_button"
+		android:id = "@+id/search_button_welcome"
 		android:layout_width = "0dp"
 		android:layout_height = "50dp"
 		app:layout_constraintTop_toBottomOf = "@+id/search_welcome"
