--- a/app/src/main/res/layout/c_card_vacancy_close.xml
+++ b/app/src/main/res/layout/c_card_vacancy_close.xml
@@ -5,21 +5,26 @@
 	xmlns:tools = "http://schemas.android.com/tools"
 	android:layout_width = "match_parent"
 	android:layout_height = "wrap_content"
-	tools:context = ".MainActivity"
 	>
 
-	<ScrollView
+	<androidx.cardview.widget.CardView
 		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
+		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "parent"
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
+		android:layout_marginTop = "8dp"
+		android:layout_marginBottom = "8dp"
+		android:layout_marginStart = "8dp"
+		android:layout_marginEnd = "8dp"
+		app:cardCornerRadius = "5dp"
+		app:cardElevation = "5dp"
 		>
 
 		<androidx.constraintlayout.widget.ConstraintLayout
 			android:layout_width = "match_parent"
-			android:layout_height = "wrap_content"
+			android:layout_height = "match_parent"
 			>
 
 			<ImageView
@@ -30,9 +35,6 @@
 				app:layout_constraintBottom_toBottomOf = "@+id/menu"
 				app:layout_constraintStart_toStartOf = "parent"
 				app:layout_constraintEnd_toEndOf = "parent"
-				android:layout_marginTop = "8dp"
-				android:layout_marginStart = "8dp"
-				android:layout_marginEnd = "8dp"
 				android:background = "@drawable/shape_card"
 				/>
 
@@ -47,7 +49,7 @@
 				android:textStyle = "bold"
 				android:textColor = "@color/font_color"
 				android:textSize = "18sp"
-				android:maxWidth = "270dp"
+				android:maxWidth = "230dp"
 				android:maxLength = "60"
 				tools:text = "@string/card_vacancy_close_vacancy_name"
 				/>
@@ -520,14 +522,14 @@
 				app:layout_constraintBottom_toBottomOf = "parent"
 				app:layout_constraintStart_toStartOf = "@+id/background"
 				app:layout_constraintEnd_toEndOf = "@+id/background"
-				android:layout_marginTop = "16dp"
-				android:layout_marginBottom = "16dp"
+				android:layout_marginTop = "10dp"
 				android:background = "@color/theme_1_color_1"
 				app:menu = "@menu/card_vacancy"
 				app:itemIconTint = "@color/font_color"
 				app:itemTextColor = "@color/font_color"
 				app:labelVisibilityMode = "labeled"
-				></com.google.android.material.bottomnavigation.BottomNavigationView>
+				app:elevation = "0dp"
+				/>
 		</androidx.constraintlayout.widget.ConstraintLayout>
-	</ScrollView>
+	</androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
