--- a/app/src/main/res/layout/c_search.xml
+++ b/app/src/main/res/layout/c_search.xml
@@ -43,19 +43,22 @@
 	</com.google.android.material.tabs.TabLayout>
 
 	<Button
-			android:id="@+id/search_welcome"
-			android:layout_width="0dp"
-			android:layout_height="50dp"
-			app:layout_constraintTop_toTopOf = "parent"
-			app:layout_constraintBottom_toBottomOf = "parent"
-			app:layout_constraintStart_toStartOf = "parent"
-			app:layout_constraintEnd_toEndOf = "parent"
-			android:text="@string/search_view_hint"
-			android:drawableStart="@android:drawable/ic_menu_search"
-			android:textSize="16sp"
-			android:padding="16dp"
-			android:textColor = "@color/font_color"
-			android:background = "@color/theme_1_hover"/>
+		android:id = "@+id/search_welcome"
+		android:layout_width = "0dp"
+		android:layout_height = "50dp"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"
+		android:background = "@color/theme_1_hover"
+		android:textColor = "@color/font_color"
+		android:textSize = "14sp"
+		android:text = "@string/search_view_hint"
+		android:drawableStart = "@android:drawable/ic_menu_search"
+		android:paddingStart="90dp"
+		android:paddingEnd="8dp"
+		android:textAlignment = "textStart"
+		/>
 
 	<Button
 		android:id = "@+id/search_button_welcome"
