--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,66 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <androidx.drawerlayout.widget.DrawerLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/drawer_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-    >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-        >
+	<data>
 
-            <FrameLayout
-                    android:id="@+id/fragment_container"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toTopOf="@+id/include_02"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-            />
+		<variable
+			name = "viewmodel"
+			type = "ru.jobni.jobni.viewmodel.MainViewModel"
+			/>
 
-            <include
-                    layout="@layout/c_menu_top"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-            />
+		<import type = "androidx.drawerlayout.widget.DrawerLayout"/>
 
-            <include
-                    android:id="@+id/include_02"
-                    layout="@layout/c_menu_bottom"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/fragment_container"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-            />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-        <!--The navigation drawer -->
-        <com.google.android.material.navigation.NavigationView
-                android:id="@+id/navigation_view"
-                android:layout_width="320dp"
-                android:layout_height="match_parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="64dp"
-                android:layout_gravity="end"
-        >
+		<import type = "androidx.core.view.GravityCompat"/>
 
-            <include
-                    layout="@layout/menu_right"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-            />
-        </com.google.android.material.navigation.NavigationView>
-    </androidx.drawerlayout.widget.DrawerLayout>
+        <import type="android.view.View" />
+	</data>
+
+	<androidx.drawerlayout.widget.DrawerLayout
+		xmlns:android = "http://schemas.android.com/apk/res/android"
+		xmlns:app = "http://schemas.android.com/apk/res-auto"
+		xmlns:tools = "http://schemas.android.com/tools"
+		xmlns:bind="http://schemas.android.com/apk/res-auto"
+		android:id = "@+id/drawer_layout"
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+
+        app:openDrawer="@{GravityCompat.END}"
+		>
+
+		<androidx.constraintlayout.widget.ConstraintLayout
+			xmlns:android = "http://schemas.android.com/apk/res/android"
+			xmlns:app = "http://schemas.android.com/apk/res-auto"
+			xmlns:tools = "http://schemas.android.com/tools"
+			android:layout_width = "match_parent"
+			android:layout_height = "match_parent"
+			>
+
+			<FrameLayout
+				android:id = "@+id/fragment_container"
+				android:layout_width = "0dp"
+				android:layout_height = "0dp"
+				app:layout_constraintTop_toTopOf = "parent"
+				app:layout_constraintBottom_toTopOf = "@+id/include_02"
+				app:layout_constraintStart_toStartOf = "parent"
+				app:layout_constraintEnd_toEndOf = "parent"
+				/>
+
+			<include
+				layout = "@layout/c_menu_top"
+                bind:viewmodel = "@{viewmodel}"
+				android:layout_width = "match_parent"
+				android:layout_height = "wrap_content"
+				/>
+
+			<include
+				android:id = "@+id/include_02"
+				layout = "@layout/c_menu_bottom"
+				android:layout_width = "0dp"
+				android:layout_height = "wrap_content"
+				app:layout_constraintTop_toBottomOf = "@+id/fragment_container"
+				app:layout_constraintBottom_toBottomOf = "parent"
+				app:layout_constraintStart_toStartOf = "parent"
+				app:layout_constraintEnd_toEndOf = "parent"
+				/>
+		</androidx.constraintlayout.widget.ConstraintLayout>
+		<!--The navigation drawer -->
+		<com.google.android.material.navigation.NavigationView
+			android:id = "@+id/navigation_view"
+			android:layout_width = "320dp"
+			android:layout_height = "match_parent"
+			app:layout_constraintTop_toTopOf = "parent"
+			app:layout_constraintBottom_toBottomOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			android:layout_marginStart = "64dp"
+			android:layout_gravity = "end"
+			>
+
+			<include
+				layout = "@layout/menu_right"
+                android:id="@+id/exp_list_include"
+				android:layout_width = "match_parent"
+				android:layout_height = "match_parent"
+				/>
+		</com.google.android.material.navigation.NavigationView>
+	</androidx.drawerlayout.widget.DrawerLayout>
 </layout>
