--- a/app/src/main/res/layout/c_intro_05.xml
+++ b/app/src/main/res/layout/c_intro_05.xml
@@ -1,44 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"
-	android:orientation = "vertical">
-	<TextView android:id = "@+id/activity_intro_5_1"
-		android:layout_width = "273dp"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toTopOf = "parent"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintStart_toStartOf = "parent"
-		android:layout_marginTop = "16dp"
-		android:layout_marginBottom = "16dp"
-		android:layout_marginStart = "48dp"
-		android:textStyle = "bold"
-		android:textSize = "18sp"
-		android:text = "@string/activity_intro_5_1"
-		android:textColor = "@color/font_color"
-		app:layout_constraintVertical_bias = "0.326"/>
-	<TextView android:id = "@+id/activity_intro_5_2"
-		android:layout_width = "345dp"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toTopOf = "parent"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-		android:layout_marginTop = "16dp"
-		android:layout_marginBottom = "16dp"
-		android:layout_marginEnd = "36dp"
-		android:textStyle = "bold"
-		android:textSize = "18sp"
-		android:text = "@string/activity_intro_5_2"
-		android:textColor = "@color/font_color"
-		app:layout_constraintVertical_bias = "0.68"/>
-	<Button android:id = "@+id/start"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-		android:layout_marginBottom = "16dp"
-		android:layout_marginEnd = "16dp"
-		android:background = "@drawable/shape_button"
-		android:text = "@string/ready"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+<layout>
+
+	<data>
+		<variable
+			name = "viewmodel"
+			type = "ru.jobni.jobni.viewmodel.MainViewModel" />
+	</data>
+
+	<androidx.constraintlayout.widget.ConstraintLayout
+		xmlns:android = "http://schemas.android.com/apk/res/android"
+		xmlns:app = "http://schemas.android.com/apk/res-auto"
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+		android:orientation = "vertical"
+		xmlns:bind="http://schemas.android.com/apk/res-auto"
+		>
+
+		<TextView
+			android:id = "@+id/activity_intro_5_1"
+			android:layout_width = "273dp"
+			android:layout_height = "wrap_content"
+			app:layout_constraintTop_toTopOf = "parent"
+			app:layout_constraintBottom_toBottomOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			android:layout_marginTop = "16dp"
+			android:layout_marginBottom = "16dp"
+			android:layout_marginStart = "48dp"
+			android:textStyle = "bold"
+			android:textColor = "@color/font_color"
+			android:textSize = "18sp"
+			android:text = "@string/activity_intro_5_1"
+			app:layout_constraintVertical_bias = "0.326"
+			/>
+
+		<TextView
+			android:id = "@+id/activity_intro_5_2"
+			android:layout_width = "345dp"
+			android:layout_height = "wrap_content"
+			app:layout_constraintTop_toTopOf = "parent"
+			app:layout_constraintBottom_toBottomOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			android:layout_marginTop = "16dp"
+			android:layout_marginBottom = "16dp"
+			android:layout_marginEnd = "36dp"
+			android:textStyle = "bold"
+			android:textColor = "@color/font_color"
+			android:textSize = "18sp"
+			android:text = "@string/activity_intro_5_2"
+			app:layout_constraintVertical_bias = "0.68"
+			/>
+
+		<Button
+			android:id = "@+id/start"
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			app:layout_constraintBottom_toBottomOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			android:layout_marginBottom = "16dp"
+			android:layout_marginEnd = "16dp"
+			android:background = "@drawable/shape_button"
+			android:text = "@string/ready"
+			android:onClick="@{() -> viewmodel.onClickBtnStart()}"
+			/>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
