--- a/app/src/main/res/layout/c_menu_bottom.xml
+++ b/app/src/main/res/layout/c_menu_bottom.xml
@@ -18,5 +18,6 @@
             app:itemIconTint="@drawable/selector_menu"
             app:itemTextColor="@drawable/selector_menu"
             app:labelVisibilityMode="labeled"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            />
 </androidx.constraintlayout.widget.ConstraintLayout>
